--- a/app/src/main/res/layout/calender_cell.xml
+++ b/app/src/main/res/layout/calender_cell.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/cellDayText"
         android:text="1"
-        android:textSize="20sp"
+        android:textSize="@dimen/med_text"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
