--- a/app/src/main/res/layout/calender_main.xml
+++ b/app/src/main/res/layout/calender_main.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,42 +11,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginBottom="@dimen/small_margin"
+        android:layout_marginTop="@dimen/small_margin">
 
     <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="<-"
-        android:textColor="@color/blue"
+        android:text="@string/lessThan"
+        android:textColor="@color/white"
         android:background="@null"
         android:onClick="previousMonthAction"
         android:textStyle="bold"
-        android:textSize="20sp"/>
+        android:textSize="@dimen/med_text"/>
 
 
     <TextView
         android:id="@+id/monthYearTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Feb"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/feb"
+        android:textSize="@dimen/med_text"
+        android:textAlignment="center"
+        android:textColor="@color/black"/>
 
 
     <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="->"
-        android:textColor="@color/blue"
+        android:text="@string/greaterThan"
+        android:textColor="@color/white"
         android:background="@null"
         android:textStyle="bold"
         android:onClick="nextMonthAction"
-        android:textSize="20sp"/>
+        android:textSize="@dimen/med_text"/>
 
     </LinearLayout>
 
@@ -60,57 +58,57 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="SUN"
+            android:text="@string/sun"
             android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/small_text"
             android:textAlignment="center"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="MON"
+            android:text="@string/mon"
             android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/small_text"
             android:textAlignment="center"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TUE"
+            android:text="@string/tue"
             android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/small_text"
             android:textAlignment="center"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="WED"
+            android:text="@string/wed"
             android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/small_text"
             android:textAlignment="center"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="THU"
+            android:text="@string/thu"
             android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/small_text"
             android:textAlignment="center"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="FRI"
+            android:text="@string/fri"
             android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/small_text"
             android:textAlignment="center"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="SAT"
+            android:text="@string/sat"
             android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/small_text"
             android:textAlignment="center"/>
 
     </LinearLayout>
@@ -119,5 +117,8 @@
         android:id="@+id/calendarRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+
+
 
 </LinearLayout>
